Added GitHub and Netlify link to footer

--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
       </main>
       <footer class="footer-container">
         This page was
-        <a href="">
+        <a
+          href="https://github.com/NatsukiSh/talking-duck-project"
+          target="_blank"
+        >
           <strong> coded </strong>
         </a>
         with ❤ by Natsuki Shuko and on
-        <a href="">
+        <a href="https://joyful-horse-b9cd51.netlify.app/" target="_blank">
           <strong> Netlify </strong>
         </a>
       </footer>
